[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/controller.gd" type="Script" id=1]
[ext_resource path="res://textures/buttons.bin.png" type="Texture" id=2]
[ext_resource path="res://textures/circle.png" type="Texture" id=3]



[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 70.0

[node name="HUD" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RightPad" type="Control" parent="." index="0"]

editor/display_folded = true
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -263.0
margin_top = -239.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="sword" type="TouchScreenButton" parent="RightPad" index="0"]

position = Vector2( 171.323, 147.345 )
scale = Vector2( 1.20312, 1.20312 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Position" type="Position2D" parent="RightPad/sword" index="0"]

position = Vector2( 0.871216, -0.0337219 )
scale = Vector2( 0.44156, 0.44156 )

[node name="Sprite" type="Sprite" parent="RightPad/sword" index="1"]

position = Vector2( 0.219543, 0.45752 )
scale = Vector2( 2.95551, 2.95551 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
_sections_unfolded = [ "Animation" ]

[node name="dash" type="TouchScreenButton" parent="RightPad" index="1"]

position = Vector2( 33.4353, 183.435 )
scale = Vector2( 0.5, 0.5 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Position" type="Position2D" parent="RightPad/dash" index="0"]

position = Vector2( -0.365479, -0.0635376 )
scale = Vector2( 1.0625, 1.0625 )

[node name="Sprite4" type="Sprite" parent="RightPad/dash" index="1"]

position = Vector2( 2.71497, 2.09583 )
scale = Vector2( 3.05642, 3.05642 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 2
_sections_unfolded = [ "Animation" ]

[node name="bow" type="TouchScreenButton" parent="RightPad" index="2"]

position = Vector2( 167.654, 8.14691 )
scale = Vector2( 0.53125, 0.53125 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Position" type="Position2D" parent="RightPad/bow" index="0"]

position = Vector2( -2.16064, -2.16058 )

[node name="Sprite5" type="Sprite" parent="RightPad/bow" index="1"]

position = Vector2( 0.718628, -1.0752 )
scale = Vector2( 2.87663, 2.87663 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="shield" type="TouchScreenButton" parent="RightPad" index="3"]

position = Vector2( 47.2819, 68.5482 )
scale = Vector2( 0.53125, 0.53125 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Position" type="Position2D" parent="RightPad/shield" index="0"]

position = Vector2( -0.776611, -0.776794 )

[node name="Sprite3" type="Sprite" parent="RightPad/shield" index="1"]

position = Vector2( 0.150024, 0.812134 )
scale = Vector2( 2.87663, 2.87663 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 3
_sections_unfolded = [ "Animation" ]

[node name="LeftPad" type="Control" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -239.0
margin_right = 264.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Pad" type="Node2D" parent="LeftPad" index="0"]

position = Vector2( 169.742, 100 )
_sections_unfolded = [ "Transform" ]

[node name="Stick" type="Sprite" parent="LeftPad/Pad" index="0"]

visible = false
position = Vector2( 0.269135, 2.75537 )
scale = Vector2( 0.317926, 0.317926 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="LeftPad/Pad" index="1"]

scale = Vector2( 1.86168, 1.86168 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Exit" type="Control" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 401.0
margin_top = 234.0
margin_right = 441.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button" type="Button" parent="Exit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 12.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Button2" type="Button" parent="Exit" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 111.0
margin_right = 123.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="ShowMenu" type="Button" parent="." index="3"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -54.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1
_sections_unfolded = [ "Anchor" ]

[node name="MenuList" type="ItemList" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 908.0
margin_right = 1024.0
margin_bottom = 601.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [ "Close", null, false, "Items", null, false ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Anchor" ]

[node name="Menu" type="Control" parent="." index="5"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Items" type="ItemList" parent="Menu" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 320.0
margin_top = 79.0
margin_right = 680.0
margin_bottom = 379.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )

[node name="Button" type="Button" parent="." index="6"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -65.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Salir"
flat = false
align = 1

[node name="End" type="Panel" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.5
margin_top = -66.0
margin_right = 110.5
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button" type="Button" parent="End" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 81.0
margin_right = 122.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Volver al menu"
flat = false
align = 1

[node name="Button2" type="Button" parent="End" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = 81.0
margin_right = 202.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Salir"
flat = false
align = 1

[node name="Label" type="Label" parent="End" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 59.0
margin_top = 15.0
margin_right = 170.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "     Lo lograste!!
Gracias por jugar!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Die" type="Panel" parent="." index="8"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.5
margin_top = -66.0
margin_right = 110.5
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button" type="Button" parent="Die" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 81.0
margin_right = 122.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Volver al menu"
flat = false
align = 1

[node name="Button2" type="Button" parent="Die" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = 81.0
margin_right = 202.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Salir"
flat = false
align = 1

[node name="Label" type="Label" parent="Die" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 22.0
margin_right = 190.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Lo sentimos, has perdido"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSlider" type="VSlider" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 68.0
margin_right = 27.0
margin_bottom = 327.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
min_value = 0.1
max_value = 10.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[connection signal="pressed" from="ShowMenu" to="." method="_show_menu"]

[connection signal="item_selected" from="MenuList" to="." method="_menu_list_selected"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]


